--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     margin: 0;
     padding: 0;
 }
+body {
+    font-family: "Poppins", sans-serif;
+    background-color: initial;
+}
 
 .nav {
     background-color: #ef5122;
